--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ before_install:
   - phpenv config-rm xdebug.ini
 
 script:
-  - git clone -b 'master' --single-branch https://github.com/spryker-eco/eco-ci.git ecoci
+  - git clone -b 'master' --single-branch https://github.com/kaptenandson/eco-ci.git ecoci
   - cd ecoci
   - git checkout d2ede17cfbf4e2674212db1c212b151f25a28f52
   - ./build/travis.sh
